<?xml version="1.0"?>
<package>
  <name>corobot</name>
  <version>1.0.0</version>
  <description>The Corobot package will help you get started with your Corobot. There is everything necessary to control the robot, view the camera...</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mcormier@coroware.com">Morgan Cormier</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/Corobot</url> -->
  <url type="website">http://ros.org/wiki/corobot</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>corobot_msgs</run_depend>
  <run_depend>corobot_arm</run_depend>
  <run_depend>corobot_camera</run_depend>
  <run_depend>corobot_gps</run_depend>
  <run_depend>corobot_joystick</run_depend>
  <run_depend>map_to_jpeg</run_depend>
  <run_depend>corobot_pantilt</run_depend>
  <run_depend>corobot_phidget_ik</run_depend>
  <run_depend>corobot_ssc32</run_depend>
  <run_depend>corobot_state_tf</run_depend>
  <run_depend>corobot_teleop</run_depend>
  <run_depend>phidget_motor</run_depend>
  <run_depend>phidget_servo</run_depend>
  <run_depend>phidget_stepper</run_depend>
  <run_depend>corobot_launch</run_depend>
  <run_depend>corobot_gazebo</run_depend>
  <run_depend>corobot_urdf</run_depend>
  <run_depend>corobot_diagnostics</run_depend>




  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <metapackage/>

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
