<?xml version="1.0"?>
<package>
  <name>corobot_arm</name>
  <version>1.0.0</version>
  <description> High Level interface to move the arm of the Corobot. </description>

  <maintainer email="mcormier@coroware.com">Morgan Cormier</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/corobot_arm</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>corobot_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>xmlrpcpp</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>corobot_msgs</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>xmlrpcpp</run_depend>

</package>


