<?xml version="1.0"?>
<package>
  <name>corobot_camera</name>
  <version>1.0.0</version>
  <description>

A node that interface the corobot's webcam.
The package is based on the package dynamic_uvc_cam from Stefan Diewald. Main changes are to start the camera right away.
Package is GPL since some of its code is adapted from GPL programs such as guvcview

  </description>

  <maintainer email="mcormier@coroware.com">Morgan Cormier</maintainer>
  <license>GPL</license>
  <url type="website">http://ros.org/wiki/corobot_camera</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>
  <build_depend>corobot_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>libswscale-dev</build_depend>
  <build_depend>corobot_diagnostics</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>camera_calibration_parsers</run_depend>
  <run_depend>corobot_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>libswscale-dev</run_depend>
  <run_depend>corobot_diagnostics</run_depend>


  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -luvc_cam"/>
  </export>

</package>
