<?xml version="1.0"?>
<package>
  <name>corobot_gps</name>
  <version>1.0.0</version>
  <description>

     corobot_gps connects to a GPSd server and broadcasts
     GPS fixes using the NavSatFix message.
     The package is based of the gpsd_client package made by Rob Thomson and Ken Tossell. 

  </description>
  <maintainer email="mcormier@coroware.com">Morgan Cormier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/corobot_gps</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>corobot_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>corobot_diagnostics</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>corobot_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>corobot_diagnostics</run_depend>


</package>


