<?xml version="1.0"?>
<package>
  <name>corobot_msgs</name>
  <version>1.0.0</version>
  <description>

    This package defines messages used in the Corobot stack.
  </description>

  <maintainer email="mcormier@coroware.com">Morgan Cormier</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/corobot_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>genmsg</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>genmsg</run_depend>
</package>
