<?xml version="1.0"?>
<package>
  <name>corobot_phidget_ik</name>
  <version>1.0.0</version>
  <description>

     this package is an interface to the device Phidget interface Kit 8/8/8 for CoroWare's robot Corobot. 

  </description>

  <maintainer email="mcormier@coroware.com">Morgan Cormier</maintainer>
  <license>GPL</license>
  <url type="website">http://ros.org/wiki/corobot_phidget_ik</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>corobot_msgs</build_depend>
  <build_depend>corobot_diagnostics</build_depend>
  <build_depend>std_srvs</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>corobot_msgs</run_depend>
  <run_depend>corobot_diagnostics</run_depend>
  <run_depend>std_srvs</run_depend>

</package>


