<?xml version="1.0"?>
<package>
  <name>corobot_ssc32</name>
  <version>1.0.0</version>
  <description>

     A package that interfaces the SSC32 hardware board specific to the Corobot.
     It uses the SSC32_core package made by Steven bellens: steven.bellens@mech.kuleuven.be 

  </description>

  <maintainer email="mcormier@coroware.com">Morgan Cormier</maintainer>
  <license>GPL</license>
  <url type="website">http://ros.org/wiki/corobot_ssc32</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>corobot_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>corobot_diagnostics</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>corobot_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>corobot_diagnostics</run_depend>

</package>
