<?xml version="1.0"?>
<package>
  <name>corobot_teleop</name>
  <version>1.0.0</version>
  <description>

     Teleoperation package that permits to control the Corobot. It also permits to connect to a distant Corobot.
     Data such as Camera, sensor (IR, encoder, batterie life) values can be read.

  </description>

  <maintainer email="mcormier@coroware.com">Morgan Cormier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/corobot_teleop</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>qt-ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>corobot_arm</build_depend>
  <build_depend>Phidget_motor</build_depend>
  <build_depend>corobot_msgs</build_depend>
  <build_depend>corobot_phidget_ik</build_depend>
  <build_depend>corobot_joystick</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>qt4</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>qt-ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>corobot_arm</run_depend>
  <run_depend>phidget_motor</run_depend>
  <run_depend>corobot_msgs</run_depend>
  <run_depend>corobot_phidget_ik</run_depend>
  <run_depend>corobot_joystick</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>qt4</run_depend>


  
</package>
