<?xml version="1.0"?>
<package>
  <name>phidget_motor</name>
  <version>1.0.0</version>
  <description>

     A service to control the robot drive motors using the Phidget HC Motor Controller.

    This package depends on the Phidgets client library being installed manually from
    http://www.phidgets.com/downloads/libraries/libphidget_2.1.8.20111028.tar.gz
    and then the Python module from
    http://www.phidgets.com/downloads/libraries/PhidgetsPython_2.1.8.20111028.zip

  </description>
  <author>Bill Mania/bmania@coroware.com</author>
  <author>Morgan Cormier/mcormier@coroware.com</author>
  <license>Copyright 2011 Coroware, Inc.</license>
  <maintainer email="mcormier@coroware.com">Morgan Cormier</maintainer>
  <url type="website">http://ros.org/wiki/phidget_motor</url>

  <buildtool_depend>catkin</buildtool_depend>

  <url></url>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>corobot_msgs</build_depend>
  <build_depend>corobot_diagnostics</build_depend>



  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>corobot_msgs</run_depend>
  <run_depend>corobot_diagnostics</run_depend>


</package>


